--- a/NameSpaceDemo/NameSpaceDemo.csproj
+++ b/NameSpaceDemo/NameSpaceDemo.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\microsoft.string.extensions\microsoft.string.extensions.csproj" />
   </ItemGroup>
 
