--- a/SerializeDemo/SerializeDemo.csproj
+++ b/SerializeDemo/SerializeDemo.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<NoWarn>$(NoWarn);SYSLIB0020</NoWarn>
   </PropertyGroup>
 
 </Project>
