--- a/WPFDemo/WPFDemo.csproj
+++ b/WPFDemo/WPFDemo.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="sabatex.WPF.Controls" Version="3.1.4" />
+  </ItemGroup>
+
 </Project>
