--- a/WPFDemo/WPFDemo.csproj
+++ b/WPFDemo/WPFDemo.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="sabatex.WPF.Controls" Version="3.1.4" />
+    <PackageReference Include="sabatex.WPF.Controls" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\itstepWpfControls\itstepWpfControls.csproj" />
   </ItemGroup>
 
 </Project>
