--- a/WindowsFormsExplorer/App.config
+++ b/WindowsFormsExplorer/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="WindowsFormsExplorer.Properties.Settings.testConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\serhi\source\repos\sabatex\PV125\WinForms\WinFormsHelloWorld\test.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\DataBases\test.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
